--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  localization: ^2.1.1
+  internationalization: ^4.0.1
+  intl: any
+  firebase_core: ^2.24.0
+  firebase_auth: ^4.15.0
+  awesome_dialog: ^3.1.0
+  provider: ^6.1.1
+  flutter_facebook_auth: ^6.0.3
+  google_sign_in: ^6.1.6
+  twitter_login: ^4.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -57,11 +66,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  generate: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/auth/
+    - assets/images/auth/continue account/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -74,17 +83,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/font family/Poppins-Bold.ttf
+        - asset: assets/fonts/font family/Poppins-Light.ttf
+        - asset: assets/fonts/font family/Poppins-Regular.ttf
+        - asset: assets/fonts/font family/Poppins-SemiBold.ttf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
