--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,7 +25,7 @@ if (flutterVersionName == null) {
 android {
     namespace "com.example.todo_list_application"
     compileSdkVersion flutter.compileSdkVersion
-    ndkVersion "25.1.8937393"
+    ndkVersion flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -45,11 +45,10 @@ android {
         applicationId "com.example.todo_list_application"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 21
+        minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        multiDexEnabled = true
     }
 
     buildTypes {
@@ -65,14 +64,4 @@ flutter {
     source '../..'
 }
 
-dependencies {
-    implementation 'com.facebook.android:facebook-applinks:latest.release'
-    implementation 'com.facebook.android:facebook-common:latest.release'
-    implementation 'com.facebook.android:facebook-core:latest.release'
-    implementation 'com.facebook.android:facebook-gamingservices:latest.release'
-    implementation 'com.facebook.android:facebook-login:latest.release'
-    implementation 'com.facebook.android:facebook-messenger:latest.release'
-    implementation 'com.facebook.android:facebook-share:latest.release'
-    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
-    implementation("androidx.multidex:multidex:2.0.1")
-}
+dependencies {}
