--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,14 +38,27 @@ dependencies:
   localization: ^2.1.1
   internationalization: ^4.0.1
   intl: any
-  firebase_core: ^2.24.0
-  firebase_auth: ^4.15.0
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.2
   awesome_dialog: ^3.1.0
   provider: ^6.1.1
   flutter_facebook_auth: ^6.0.3
   google_sign_in: ^6.1.6
   twitter_login: ^4.0.1
   flutter_zoom_drawer: ^3.1.1
+  cloud_firestore: ^4.13.4
+  image_picker: ^1.0.4
+  permission_handler: ^11.1.0
+  device_info_plus: ^9.1.1
+  pinput: ^3.0.1
+  font_awesome_flutter: ^10.6.0
+  intl_phone_field:
+    git:
+      url: https://github.com/HalimWagih66/intl_phone_field.git
+  firebase_storage: ^11.5.5
+  path: ^1.8.3
+  rive: ^0.11.17
+  flutter_svg: ^2.0.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -74,6 +87,7 @@ flutter:
     - assets/images/auth/continue account/
     - assets/images/onboarding/
     - assets/images/base_images/
+    - assets/images/auth/continue_account_with_email/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -99,6 +113,9 @@ flutter:
     - family: Ubuntu
       fonts:
         - asset: assets/fonts/Ubuntu/Ubuntu-Bold.ttf
+    - family: Manrope
+      fonts:
+        - asset: assets/fonts/Manrope/Manrope-SemiBold.ttf
 
   #
   # For details regarding fonts from package dependencies,
